--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-starter",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "start-dev": "nodemon app.js",
     "start": "node app.js"
